Bug 1337564 - Don't use JSON behavior for __proto__ with eval. r=jwalden

Differential Revision: https://phabricator.services.mozilla.com/D45381