js/src/vm/JSONParser.cpp
@@ -77,7 +77,7 @@ void JSONParser<CharT>::getTextPosition(uint32_t* column, uint32_t* line) {
 
 template <typename CharT>
 void JSONParser<CharT>::error(const char* msg) {
-  if (errorHandling == RaiseError) {
+  if (parseType == ParseType::JSONParse) {
     uint32_t column = 1, line = 1;
     getTextPosition(&column, &line);
 
@@ -93,7 +93,9 @@ void JSONParser<CharT>::error(const char* msg) {
   }
 }
 
-bool JSONParserBase::errorReturn() { return errorHandling == NoError; }
+bool JSONParserBase::errorReturn() {
+  return parseType == ParseType::AttemptForEval;
+}
 
 template <typename CharT>
 template <JSONParserBase::StringType ST>
@@ -666,6 +668,17 @@ bool JSONParser<CharT>::parse(MutableHandleValue vp) {
       JSONMember:
         if (token == String) {
           jsid id = AtomToId(atomValue());
+          if (parseType == ParseType::AttemptForEval) {
+            // In |JSON.parse|, "__proto__" is a property like any other and may
+            // appear multiple times. In object literal syntax, "__proto__" is
+            // prototype mutation and can appear at most once. |JSONParser| only
+            // supports the former semantics, so if this parse attempt is for
+            // |eval|, return true (without reporting an error) to indicate the
+            // JSON parse attempt was unsuccessful.
+            if (id == NameToId(cx->names().proto)) {
+              return true;
+            }
+          }
           PropertyVector& properties = stack.back().properties();
           if (!properties.append(IdValuePair(id))) {
             return false;
